--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@ limitations under the License.
 	<div id="about_label">About</div>
 	<div id="about_box">
 		<div id="about_text">
-			<h1>BroadSoft Xtended Dialer for Google Chrome&trade;</h1>
+			<h1>Intechnology branded Xtended Dialer for Google Chrome&trade;</h1>
 			<p>Copyright 2013, BroadSoft, Inc.</p>
 			<p>Licensed under the Apache License, Version 2.0 (the
 				"License"); you may not use this file except in compliance with the
